--- a/index.html
+++ b/index.html
@@ -58,41 +58,38 @@
                 </li>
             </ul>
         </div>
-        <div class="warning-cell">
-            <ul>
-                <li>
-                    <strong class="warning">Внимание!</strong>
-                    <ul class="border-warning">
-                        <li>
-                            18.09(пятница) сам.работа по ист.бел.
-                        </li>
-                        <li>
-                            18.09(пятница) термин. диктант по географ.
-                        </li>
-                    </ul>
-                </li>
-            </ul>
-        </div>
+<!--        <div class="warning-cell">-->
+<!--            <ul>-->
+<!--                <li>-->
+<!--                    <strong class="warning">Внимание!</strong>-->
+<!--                    <ul class="border-warning">-->
+<!--                        <li>-->
+<!--                            -->
+<!--                        </li>-->
+<!--                    </ul>-->
+<!--                </li>-->
+<!--            </ul>-->
+<!--        </div>-->
     </div>
 <!--   &sect; -->
-    <h2 id="timetable">Расписание на 14-18 сентября</h2>
+    <h2 id="timetable">Расписание на 21-25 сентября</h2>
     <div class="timetable-day">
         <h3 id="timetable-monday">понедельник</h3>
         <div class="row">
             <div class="timetable-cell">биология</div>
-            <div class="timetable-cell">&sect;2, додел. табл.</div>
+            <div class="timetable-cell">&sect;1-3 сам. работа</div>
         </div>
         <div class="row">
             <div class="timetable-cell">алгебра</div>
-            <div class="timetable-cell">№1.86, №1.89, №1.90</div>
+            <div class="timetable-cell">&sect;2, работа над ошик.</div>
         </div>
         <div class="row">
             <div class="timetable-cell">англ.яз.</div>
-            <div class="timetable-cell">с.15 упр.3 (a,b)<br>{группа Нтальи Петровны}</div>
+            <div class="timetable-cell">с.17 упр.5 (a)<br>{группа Нтальи Петровны}</div>
         </div>
         <div class="row">
             <div class="timetable-cell">бел.мова</div>
-            <div class="timetable-cell">&sect;3, упр.16(п.)<br>принести тетр. для конт. работ</div>
+            <div class="timetable-cell">&sect;4, упр.25</div>
         </div>
         <div class="row">
             <div class="timetable-cell">Ч З С</div>
@@ -116,15 +113,15 @@
         </div>
         <div class="row">
             <div class="timetable-cell">англ.яз.</div>
-            <div class="timetable-cell">с.11 упр.2 (раб. тетр.)<br>{группа Натальи Петровны}</div>
+            <div class="timetable-cell">с.19 упр.3 (а)<br>{группа Натальи Петровны}</div>
         </div>
         <div class="row">
             <div class="timetable-cell">русск.яз.</div>
-            <div class="timetable-cell">&sect;3 с.15 отв. на вопр.,упр.15<br></div>
+            <div class="timetable-cell">упр.29<br></div>
         </div>
         <div class="row">
             <div class="timetable-cell">геометрия</div>
-            <div class="timetable-cell">№9</div>
+            <div class="timetable-cell">&sect;4, №14</div>
         </div>
         <div class="row">
             <div class="timetable-cell">русск.лит.</div>
@@ -237,7 +234,7 @@
         <div class="cell"></div>
         <div class="cell"></div>
         <div class="cell"></div>
-        <div class="cell"></div>
+        <div class="cell">7</div>
         <div class="cell"></div>
         <div class="cell"></div>
 
@@ -267,7 +264,7 @@
         <div class="cell"></div>
         <div class="cell"></div>
         <div class="cell"></div>
-        <div class="cell"></div>
+        <div class="cell">4</div>
         <div class="cell"></div>
         <div class="cell"></div>
 
@@ -297,7 +294,7 @@
         <div class="cell"></div>
         <div class="cell"></div>
         <div class="cell"></div>
-        <div class="cell">5</div>
+        <div class="cell">8</div>
         <div class="cell"></div>
         <div class="cell"></div>
 
@@ -307,7 +304,7 @@
         <div class="cell"></div>
         <div class="cell"></div>
         <div class="cell"></div>
-        <div class="cell"></div>
+        <div class="cell">9</div>
         <div class="cell"></div>
         <div class="cell"></div>
 
@@ -357,7 +354,7 @@
         <div class="cell"></div>
         <div class="cell"></div>
         <div class="cell"></div>
-        <div class="cell"></div>
+        <div class="cell">7</div>
         <div class="cell"></div>
         <div class="cell"></div>
 
@@ -416,9 +413,9 @@
     <div class="row">
         <div class="cell">Поскробко</div>
         <div class="cell"></div>
-        <div class="cell">6</div>
         <div class="cell"></div>
-        <div class="cell">6</div>
+        <div class="cell"></div>
+        <div class="cell"></div>
         <div class="cell"></div>
         <div class="cell"></div>
 
@@ -448,7 +445,7 @@
         <div class="cell"></div>
         <div class="cell"></div>
         <div class="cell"></div>
-        <div class="cell"></div>
+        <div class="cell">7</div>
         <div class="cell"></div>
         <div class="cell"></div>
 
@@ -478,7 +475,7 @@
         <div class="cell"></div>
         <div class="cell"></div>
         <div class="cell"></div>
-        <div class="cell">5</div>
+        <div class="cell">9</div>
         <div class="cell"></div>
         <div class="cell"></div>
 
@@ -496,9 +493,9 @@
     <div class="row">
         <div class="cell">Шубенок</div>
         <div class="cell"></div>
-        <div class="cell">8</div>
         <div class="cell"></div>
-        <div class="cell">7</div>
+        <div class="cell"></div>
+        <div class="cell"></div>
         <div class="cell"></div>
         <div class="cell"></div>
 
@@ -651,7 +648,7 @@
         <div class="cell"></div>
         <div class="cell"></div>
         <div class="cell"></div>
-        <div class="cell">8</div>
+        <div class="cell"></div>
         <div class="cell"></div>
         <div class="cell"></div>
 
@@ -734,7 +731,7 @@
         <div class="cell"></div>
         <div class="cell"></div>
         <div class="cell"></div>
-        <div class="cell">6</div>
+        <div class="cell"></div>
 
     </div>
     <div class="row">
@@ -749,7 +746,7 @@
     </div>
     <div class="row">
         <div class="cell">Рудаков</div>
-        <div class="cell">6</div>
+        <div class="cell"></div>
         <div class="cell"></div>
         <div class="cell"></div>
         <div class="cell"></div>
@@ -779,17 +776,17 @@
     </div>
     <div class="row">
         <div class="cell">Шарох</div>
-        <div class="cell">6</div>
         <div class="cell"></div>
         <div class="cell"></div>
         <div class="cell"></div>
         <div class="cell"></div>
-        <div class="cell">7</div>
+        <div class="cell"></div>
+        <div class="cell"></div>
 
     </div>
     <div class="row">
         <div class="cell">Шубенок</div>
-        <div class="cell">7</div>
+        <div class="cell"></div>
         <div class="cell"></div>
         <div class="cell"></div>
         <div class="cell"></div>
@@ -824,7 +821,7 @@
         <div class="cell"></div>
         <div class="cell"></div>
         <div class="cell"></div>
-        <div class="cell">7</div>
+        <div class="cell"></div>
         <div class="cell"></div>
         <div class="cell"></div>
 
@@ -866,7 +863,7 @@
         <div class="cell"></div>
         <div class="cell"></div>
         <div class="cell"></div>
-        <div class="cell">9</div>
+        <div class="cell"></div>
 
     </div>
     <div class="row">
@@ -884,7 +881,7 @@
         <div class="cell"></div>
         <div class="cell"></div>
         <div class="cell"></div>
-        <div class="cell">8</div>
+        <div class="cell"></div>
         <div class="cell"></div>
         <div class="cell"></div>
 
@@ -916,7 +913,7 @@
         <div class="cell"></div>
         <div class="cell"></div>
         <div class="cell"></div>
-        <div class="cell">5</div>
+        <div class="cell"></div>
 
     </div>
         <div class="row">
@@ -936,7 +933,7 @@
         <div class="cell"></div>
         <div class="cell"></div>
         <div class="cell"></div>
-        <div class="cell">9</div>
+        <div class="cell"></div>
 
     </div>
     <div class="row">
@@ -984,7 +981,7 @@
         <div class="cell"></div>
         <div class="cell"></div>
         <div class="cell"></div>
-        <div class="cell">7</div>
+        <div class="cell"></div>
         <div class="cell"></div>
         <div class="cell"></div>
 
@@ -1036,7 +1033,7 @@
         <div class="cell"></div>
         <div class="cell"></div>
         <div class="cell"></div>
-        <div class="cell">9</div>
+        <div class="cell"></div>
 
     </div>
     <div class="row">
@@ -1074,7 +1071,7 @@
         <div class="cell"></div>
         <div class="cell"></div>
         <div class="cell"></div>
-        <div class="cell">6</div>
+        <div class="cell"></div>
         <div class="cell"></div>
         <div class="cell"></div>
 
