--- a/index.html
+++ b/index.html
@@ -568,7 +568,7 @@
         <div class="cell"></div>
         <div class="cell"></div>
         <div class="cell"></div>
-        <div class="cell">8</div>
+        <div class="cell"></div>
         <div class="cell"></div>
         <div class="cell"></div>
 
@@ -630,7 +630,7 @@
         <div class="cell"></div>
         <div class="cell"></div>
         <div class="cell"></div>
-        <div class="cell">8</div>
+        <div class="cell"></div>
 
     </div>
     <div class="row">
@@ -638,9 +638,9 @@
         <div class="cell"></div>
         <div class="cell"></div>
         <div class="cell"></div>
-        <div class="cell">6</div>
         <div class="cell"></div>
-        <div class="cell">7</div>
+        <div class="cell"></div>
+        <div class="cell"></div>
 
     </div>
     <div class="row">
@@ -696,7 +696,7 @@
     </div>
     <div class="row">
         <div class="cell">Месник</div>
-        <div class="cell">9</div>
+        <div class="cell"></div>
         <div class="cell"></div>
         <div class="cell"></div>
         <div class="cell"></div>
