--- a/index.html
+++ b/index.html
@@ -178,11 +178,11 @@
     </div>
     <div class="row">
         <div class="timetable-cell">геометрия</div>
-        <div class="timetable-cell"></div>
+        <div class="timetable-cell">&sect;4-5 №17,№22</div>
     </div>
     <div class="row">
         <div class="timetable-cell">русск.лит.</div>
-        <div class="timetable-cell"></div>
+        <div class="timetable-cell">с.27-28 выр. чт. по ролям <br>вопр.3 по желанию</div>
     </div>
 </div>
 
@@ -824,12 +824,12 @@
         </div>
         <div class="row">
             <div class="cell">Барботкин</div>
+            <div class="cell">8</div>
             <div class="cell"></div>
             <div class="cell"></div>
+            <div class="cell">8</div>
             <div class="cell"></div>
-            <div class="cell"></div>
-            <div class="cell"></div>
-            <div class="cell"></div>
+            <div class="cell">6</div>
 
         </div>
         <div class="row">
@@ -844,8 +844,8 @@
         </div>
         <div class="row">
             <div class="cell">Герцев</div>
-            <div class="cell"></div>
-            <div class="cell"></div>
+            <div class="cell">4</div>
+            <div class="cell">3</div>
             <div class="cell"></div>
             <div class="cell"></div>
             <div class="cell"></div>
@@ -854,7 +854,7 @@
         </div>
         <div class="row">
             <div class="cell">Гребенёк</div>
-            <div class="cell"></div>
+            <div class="cell">7</div>
             <div class="cell"></div>
             <div class="cell"></div>
             <div class="cell"></div>
@@ -867,7 +867,7 @@
             <div class="cell"></div>
             <div class="cell"></div>
             <div class="cell"></div>
-            <div class="cell"></div>
+            <div class="cell">6</div>
             <div class="cell"></div>
             <div class="cell"></div>
 
@@ -884,7 +884,7 @@
         </div>
         <div class="row">
             <div class="cell">Жвайкина</div>
-            <div class="cell"></div>
+            <div class="cell">6</div>
             <div class="cell"></div>
             <div class="cell"></div>
             <div class="cell"></div>
@@ -897,7 +897,7 @@
             <div class="cell"></div>
             <div class="cell"></div>
             <div class="cell"></div>
-            <div class="cell"></div>
+            <div class="cell">8</div>
             <div class="cell"></div>
             <div class="cell"></div>
 
@@ -907,7 +907,7 @@
             <div class="cell"></div>
             <div class="cell"></div>
             <div class="cell"></div>
-            <div class="cell"></div>
+            <div class="cell">6</div>
             <div class="cell"></div>
             <div class="cell"></div>
 
@@ -929,12 +929,12 @@
             <div class="cell"></div>
             <div class="cell"></div>
             <div class="cell"></div>
-            <div class="cell"></div>
+            <div class="cell">9</div>
 
         </div>
         <div class="row">
             <div class="cell">Киреев</div>
-            <div class="cell"></div>
+            <div class="cell">9</div>
             <div class="cell"></div>
             <div class="cell"></div>
             <div class="cell"></div>
@@ -944,12 +944,12 @@
         </div>
         <div class="row">
             <div class="cell">Кобец</div>
+            <div class="cell">10</div>
             <div class="cell"></div>
             <div class="cell"></div>
             <div class="cell"></div>
             <div class="cell"></div>
-            <div class="cell"></div>
-            <div class="cell"></div>
+            <div class="cell">7</div>
 
         </div>
         <div class="row">
@@ -989,7 +989,7 @@
             <div class="cell"></div>
             <div class="cell"></div>
             <div class="cell"></div>
-            <div class="cell"></div>
+            <div class="cell">9</div>
 
         </div>
         <div class="row">
@@ -1024,12 +1024,12 @@
         </div>
         <div class="row">
             <div class="cell">Раковский</div>
+            <div class="cell">6</div>
             <div class="cell"></div>
             <div class="cell"></div>
             <div class="cell"></div>
             <div class="cell"></div>
-            <div class="cell"></div>
-            <div class="cell"></div>
+            <div class="cell">7</div>
 
         </div>
         <div class="row">
@@ -1047,7 +1047,7 @@
             <div class="cell"></div>
             <div class="cell"></div>
             <div class="cell"></div>
-            <div class="cell"></div>
+            <div class="cell">6</div>
             <div class="cell"></div>
             <div class="cell"></div>
 
