--- a/index.html
+++ b/index.html
@@ -59,18 +59,21 @@
             </li>
         </ul>
     </div>
-    <!--        <div class="warning-cell">-->
-    <!--            <ul>-->
-    <!--                <li>-->
-    <!--                    <strong class="warning">Внимание!</strong>-->
-    <!--                    <ul class="border-warning">-->
-    <!--                        <li>-->
-    <!--                            -->
-    <!--                        </li>-->
-    <!--                    </ul>-->
-    <!--                </li>-->
-    <!--            </ul>-->
-    <!--        </div>-->
+            <div class="warning-cell">
+                <ul>
+                    <li>
+                        <strong class="warning">Внимание!</strong>
+                        <ul class="border-warning">
+                            <li>
+                              29.09.(вторник)  контрольная по русск. яз.
+                            </li>
+                            <li>
+                                31.09(четверг) контрольная по геометр.
+                            </li>
+                        </ul>
+                    </li>
+                </ul>
+            </div>
 </div>
 <!--   &sect; -->
 <h2 id="timetable">Расписание на 21-25 сентября</h2>
@@ -190,7 +193,7 @@
     <h3 id="timetable-friday">пятница</h3>
     <div class="row">
         <div class="timetable-cell">англ.яз.</div>
-        <div class="timetable-cell"><br>{группа Натальи Петровны}</div>
+        <div class="timetable-cell">c. 22 упр.4 (а)<br>{группа Натальи Петровны}</div>
     </div>
     <div class="row">
         <div class="timetable-cell">физика</div>
@@ -202,15 +205,15 @@
     </div>
     <div class="row">
         <div class="timetable-cell">алгебра</div>
-        <div class="timetable-cell"></div>
+        <div class="timetable-cell">&sect;2 (свойства), №1.147, 1.148,1.149</div>
     </div>
     <div class="row">
         <div class="timetable-cell">ист.бел.</div>
-        <div class="timetable-cell"></div>
+        <div class="timetable-cell">&sect;3</div>
     </div>
     <div class="row">
         <div class="timetable-cell">географ.</div>
-        <div class="timetable-cell"></div>
+        <div class="timetable-cell">&sect;2</div>
     </div>
 </div>
 <h2 id="grades">Оценки</h2>
@@ -1111,24 +1114,24 @@
                 <div class="cell"></div>
                 <div class="cell"></div>
                 <div class="cell"></div>
-                <div class="cell"></div>
+                <div class="cell">9</div>
 
             </div>
             <div class="row">
                 <div class="cell">Барботкин</div>
+                <div class="cell">6</div>
                 <div class="cell"></div>
                 <div class="cell"></div>
                 <div class="cell"></div>
                 <div class="cell"></div>
-                <div class="cell"></div>
-                <div class="cell"></div>
+                <div class="cell">9</div>
 
             </div>
             <div class="row">
                 <div class="cell">Богутский</div>
+                <div class="cell">6</div>
                 <div class="cell"></div>
-                <div class="cell"></div>
-                <div class="cell"></div>
+                <div class="cell">4</div>
                 <div class="cell"></div>
                 <div class="cell"></div>
                 <div class="cell"></div>
@@ -1151,7 +1154,7 @@
                 <div class="cell"></div>
                 <div class="cell"></div>
                 <div class="cell"></div>
-                <div class="cell"></div>
+                <div class="cell">9</div>
 
             </div>
             <div class="row">
@@ -1186,17 +1189,17 @@
             </div>
             <div class="row">
                 <div class="cell">Желя</div>
+                <div class="cell">8</div>
                 <div class="cell"></div>
                 <div class="cell"></div>
                 <div class="cell"></div>
                 <div class="cell"></div>
-                <div class="cell"></div>
-                <div class="cell"></div>
+                <div class="cell">8</div>
 
             </div>
             <div class="row">
                 <div class="cell">Исаенко</div>
-                <div class="cell"></div>
+                <div class="cell">8</div>
                 <div class="cell"></div>
                 <div class="cell"></div>
                 <div class="cell"></div>
@@ -1216,32 +1219,32 @@
             </div>
             <div class="row">
                 <div class="cell">Кашанский</div>
+                <div class="cell">7</div>
                 <div class="cell"></div>
                 <div class="cell"></div>
                 <div class="cell"></div>
                 <div class="cell"></div>
-                <div class="cell"></div>
-                <div class="cell"></div>
+                <div class="cell">9</div>
 
             </div>
             <div class="row">
                 <div class="cell">Киреев</div>
+                <div class="cell">8</div>
+                <div class="cell"></div>
+                <div class="cell">8</div>
                 <div class="cell"></div>
                 <div class="cell"></div>
-                <div class="cell"></div>
-                <div class="cell"></div>
-                <div class="cell"></div>
-                <div class="cell"></div>
+                <div class="cell">9</div>
 
             </div>
             <div class="row">
                 <div class="cell">Кобец</div>
                 <div class="cell"></div>
                 <div class="cell"></div>
+                <div class="cell">8</div>
                 <div class="cell"></div>
                 <div class="cell"></div>
-                <div class="cell"></div>
-                <div class="cell"></div>
+                <div class="cell">9</div>
 
             </div>
             <div class="row">
@@ -1276,7 +1279,7 @@
             </div>
             <div class="row">
                 <div class="cell">Месник</div>
-                <div class="cell"></div>
+                <div class="cell">8</div>
                 <div class="cell"></div>
                 <div class="cell"></div>
                 <div class="cell"></div>
@@ -1306,7 +1309,7 @@
             </div>
             <div class="row">
                 <div class="cell">Рабинов</div>
-                <div class="cell"></div>
+                <div class="cell">8</div>
                 <div class="cell"></div>
                 <div class="cell"></div>
                 <div class="cell"></div>
@@ -1316,12 +1319,12 @@
             </div>
             <div class="row">
                 <div class="cell">Раковский</div>
+                <div class="cell">8</div>
                 <div class="cell"></div>
                 <div class="cell"></div>
                 <div class="cell"></div>
                 <div class="cell"></div>
-                <div class="cell"></div>
-                <div class="cell"></div>
+                <div class="cell">9</div>
 
             </div>
             <div class="row">
@@ -1356,7 +1359,7 @@
             </div>
             <div class="row">
                 <div class="cell">Шарох</div>
-                <div class="cell"></div>
+                <div class="cell">8</div>
                 <div class="cell"></div>
                 <div class="cell"></div>
                 <div class="cell"></div>
@@ -1371,7 +1374,7 @@
                 <div class="cell"></div>
                 <div class="cell"></div>
                 <div class="cell"></div>
-                <div class="cell"></div>
+                <div class="cell">7</div>
 
             </div>
             <div class="row">
