--- a/index.html
+++ b/index.html
@@ -1415,8 +1415,8 @@
                     <div class="cell"></div>
                     <div class="cell"></div>
                     <div class="cell"></div>
-                    <div class="cell"></div>
-                    <div class="cell"></div>
+                    <div class="cell">8</div>
+                    <div class="cell">9</div>
 
                 </div>
                 <div class="row">
@@ -1425,7 +1425,7 @@
                     <div class="cell"></div>
                     <div class="cell"></div>
                     <div class="cell"></div>
-                    <div class="cell"></div>
+                    <div class="cell">3</div>
                     <div class="cell"></div>
 
                 </div>
@@ -1435,14 +1435,14 @@
                     <div class="cell"></div>
                     <div class="cell"></div>
                     <div class="cell"></div>
-                    <div class="cell"></div>
+                    <div class="cell">4</div>
                     <div class="cell"></div>
 
                 </div>
                 <div class="row">
                     <div class="cell">Гребенёк</div>
                     <div class="cell"></div>
-                    <div class="cell"></div>
+                    <div class="cell">8</div>
                     <div class="cell"></div>
                     <div class="cell"></div>
                     <div class="cell"></div>
@@ -1482,7 +1482,7 @@
                 <div class="row">
                     <div class="cell">Желя</div>
                     <div class="cell"></div>
-                    <div class="cell"></div>
+                    <div class="cell">8</div>
                     <div class="cell"></div>
                     <div class="cell"></div>
                     <div class="cell"></div>
@@ -1512,7 +1512,7 @@
                 <div class="row">
                     <div class="cell">Кашанский</div>
                     <div class="cell"></div>
-                    <div class="cell"></div>
+                    <div class="cell">5</div>
                     <div class="cell"></div>
                     <div class="cell"></div>
                     <div class="cell"></div>
@@ -1522,10 +1522,10 @@
                 <div class="row">
                     <div class="cell">Киреев</div>
                     <div class="cell"></div>
+                    <div class="cell">8</div>
                     <div class="cell"></div>
                     <div class="cell"></div>
-                    <div class="cell"></div>
-                    <div class="cell"></div>
+                    <div class="cell">8</div>
                     <div class="cell"></div>
                 </div>
                 <div class="row">
@@ -1549,7 +1549,7 @@
                 <div class="row">
                     <div class="cell">Лапшина</div>
                     <div class="cell"></div>
-                    <div class="cell"></div>
+                    <div class="cell">10</div>
                     <div class="cell"></div>
                     <div class="cell"></div>
                     <div class="cell"></div>
@@ -1567,7 +1567,7 @@
                 <div class="row">
                     <div class="cell">Месник</div>
                     <div class="cell"></div>
-                    <div class="cell"></div>
+                    <div class="cell">10</div>
                     <div class="cell"></div>
                     <div class="cell"></div>
                     <div class="cell"></div>
@@ -1589,7 +1589,7 @@
                     <div class="cell"></div>
                     <div class="cell"></div>
                     <div class="cell"></div>
-                    <div class="cell"></div>
+                    <div class="cell">6</div>
                     <div class="cell"></div>
                 </div>
                 <div class="row">
@@ -1598,7 +1598,7 @@
                     <div class="cell"></div>
                     <div class="cell"></div>
                     <div class="cell"></div>
-                    <div class="cell"></div>
+                    <div class="cell">8</div>
                     <div class="cell"></div>
 
 
@@ -1645,8 +1645,8 @@
                     <div class="cell"></div>
                     <div class="cell"></div>
                     <div class="cell"></div>
-                    <div class="cell"></div>
-                    <div class="cell"></div>
+                    <div class="cell">5</div>
+                    <div class="cell">8</div>
                 </div>
                 <div class="row">
                     <div class="cell">Шубенок</div>
