--- a/index.html
+++ b/index.html
@@ -68,7 +68,10 @@
                               29.09.(вторник)  контрольная по русск. яз.
                             </li>
                             <li>
-                                31.09(четверг) контрольная по геометр.
+                                01.10(четверг) контрольная по геометр.
+                            </li>
+                            <li>
+                                02.10(пятница) сам. по истории беларуси
                             </li>
                         </ul>
                     </li>
