--- a/index.html
+++ b/index.html
@@ -950,7 +950,7 @@
         </div>
         <div class="row">
             <div class="cell">Кобец</div>
-            <div class="cell">1</div>
+            <div class="cell"></div>
             <div class="cell"></div>
             <div class="cell"></div>
             <div class="cell"></div>
