--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
     </div>
     <div class="row">
         <div class="timetable-cell">русск.яз.</div>
-        <div class="timetable-cell"></div>
+        <div class="timetable-cell">&sect;5 упр.41</div>
     </div>
     <div class="row">
         <div class="timetable-cell">искусство</div>
@@ -188,7 +188,7 @@
     </div>
     <div class="row">
         <div class="timetable-cell">русск.лит.</div>
-        <div class="timetable-cell"></div>
+        <div class="timetable-cell">с.36-61 чит.</div>
     </div>
 </div>
 
@@ -527,7 +527,7 @@
     </div>
     <div class="row">
         <div class="cell">Атливанова</div>
-        <div class="cell"></div>
+        <div class="cell">5</div>
         <div class="cell"></div>
         <div class="cell"></div>
         <div class="cell"></div>
@@ -537,7 +537,7 @@
     </div>
     <div class="row">
         <div class="cell">Барботкин</div>
-        <div class="cell"></div>
+        <div class="cell">7</div>
         <div class="cell"></div>
         <div class="cell"></div>
         <div class="cell"></div>
@@ -557,7 +557,7 @@
     </div>
     <div class="row">
         <div class="cell">Герцев</div>
-        <div class="cell"></div>
+        <div class="cell">6</div>
         <div class="cell"></div>
         <div class="cell"></div>
         <div class="cell"></div>
@@ -567,7 +567,7 @@
     </div>
     <div class="row">
         <div class="cell">Гребенёк</div>
-        <div class="cell"></div>
+        <div class="cell">7</div>
         <div class="cell"></div>
         <div class="cell"></div>
         <div class="cell"></div>
@@ -577,7 +577,7 @@
     </div>
     <div class="row">
         <div class="cell">Демидович</div>
-        <div class="cell"></div>
+        <div class="cell">6</div>
         <div class="cell"></div>
         <div class="cell"></div>
         <div class="cell"></div>
@@ -587,7 +587,7 @@
     </div>
     <div class="row">
         <div class="cell">Жвайкин</div>
-        <div class="cell"></div>
+        <div class="cell">6</div>
         <div class="cell"></div>
         <div class="cell"></div>
         <div class="cell"></div>
@@ -597,7 +597,7 @@
     </div>
     <div class="row">
         <div class="cell">Жвайкина</div>
-        <div class="cell"></div>
+        <div class="cell">6</div>
         <div class="cell"></div>
         <div class="cell"></div>
         <div class="cell"></div>
@@ -607,7 +607,7 @@
     </div>
     <div class="row">
         <div class="cell">Желя</div>
-        <div class="cell"></div>
+        <div class="cell">6</div>
         <div class="cell"></div>
         <div class="cell"></div>
         <div class="cell"></div>
@@ -617,7 +617,7 @@
     </div>
     <div class="row">
         <div class="cell">Исаенко</div>
-        <div class="cell"></div>
+        <div class="cell">6</div>
         <div class="cell"></div>
         <div class="cell"></div>
         <div class="cell"></div>
@@ -627,7 +627,7 @@
     </div>
     <div class="row">
         <div class="cell">Ильюшенко</div>
-        <div class="cell"></div>
+        <div class="cell">7</div>
         <div class="cell"></div>
         <div class="cell"></div>
         <div class="cell"></div>
@@ -637,7 +637,7 @@
     </div>
     <div class="row">
         <div class="cell">Кашанский</div>
-        <div class="cell"></div>
+        <div class="cell">7</div>
         <div class="cell"></div>
         <div class="cell"></div>
         <div class="cell"></div>
@@ -647,7 +647,7 @@
     </div>
     <div class="row">
         <div class="cell">Киреев</div>
-        <div class="cell"></div>
+        <div class="cell">7</div>
         <div class="cell"></div>
         <div class="cell"></div>
         <div class="cell"></div>
@@ -658,7 +658,7 @@
 
     <div class="row">
         <div class="cell">Кобец</div>
-        <div class="cell"></div>
+        <div class="cell">6</div>
         <div class="cell"></div>
         <div class="cell"></div>
         <div class="cell"></div>
@@ -672,7 +672,7 @@
         <div class="cell"></div>
         <div class="cell"></div>
         <div class="cell"></div>
-        <div class="cell"></div>
+        <div class="cell">6</div>
         <div class="cell"></div>
 
     </div>
