--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
     <h3 id="timetable-friday">пятница</h3>
     <div class="row">
         <div class="timetable-cell">англ.яз.</div>
-        <div class="timetable-cell"></div>
+        <div class="timetable-cell">c.34 упр.1(a)</div>
     </div>
     <div class="row">
         <div class="timetable-cell">физика</div>
@@ -1116,23 +1116,23 @@
                 <div class="cell"></div>
                 <div class="cell"></div>
                 <div class="cell"></div>
-                <div class="cell"></div>
+                <div class="cell">7</div>
                 <div class="cell"></div>
 
             </div>
             <div class="row">
                 <div class="cell">Барботкин</div>
+                <div class="cell">10</div>
                 <div class="cell"></div>
                 <div class="cell"></div>
                 <div class="cell"></div>
-                <div class="cell"></div>
-                <div class="cell"></div>
+                <div class="cell">8</div>
                 <div class="cell"></div>
 
             </div>
             <div class="row">
                 <div class="cell">Богутский</div>
-                <div class="cell"></div>
+                <div class="cell">4</div>
                 <div class="cell"></div>
                 <div class="cell"></div>
                 <div class="cell"></div>
@@ -1142,7 +1142,7 @@
             </div>
             <div class="row">
                 <div class="cell">Герцев</div>
-                <div class="cell"></div>
+                <div class="cell">7</div>
                 <div class="cell"></div>
                 <div class="cell"></div>
                 <div class="cell"></div>
@@ -1156,13 +1156,13 @@
                 <div class="cell"></div>
                 <div class="cell"></div>
                 <div class="cell"></div>
-                <div class="cell"></div>
+                <div class="cell">8</div>
                 <div class="cell"></div>
 
             </div>
             <div class="row">
                 <div class="cell">Демидович</div>
-                <div class="cell"></div>
+                <div class="cell">6</div>
                 <div class="cell"></div>
                 <div class="cell"></div>
                 <div class="cell"></div>
@@ -1172,7 +1172,7 @@
             </div>
             <div class="row">
                 <div class="cell">Жвайкин</div>
-                <div class="cell"></div>
+                <div class="cell">7</div>
                 <div class="cell"></div>
                 <div class="cell"></div>
                 <div class="cell"></div>
@@ -1192,17 +1192,17 @@
             </div>
             <div class="row">
                 <div class="cell">Желя</div>
+                <div class="cell">8</div>
                 <div class="cell"></div>
                 <div class="cell"></div>
                 <div class="cell"></div>
-                <div class="cell"></div>
-                <div class="cell"></div>
+                <div class="cell">7</div>
                 <div class="cell"></div>
 
             </div>
             <div class="row">
                 <div class="cell">Исаенко</div>
-                <div class="cell"></div>
+                <div class="cell">7</div>
                 <div class="cell"></div>
                 <div class="cell"></div>
                 <div class="cell"></div>
@@ -1222,7 +1222,7 @@
             </div>
             <div class="row">
                 <div class="cell">Кашанский</div>
-                <div class="cell"></div>
+                <div class="cell">8</div>
                 <div class="cell"></div>
                 <div class="cell"></div>
                 <div class="cell"></div>
@@ -1232,11 +1232,11 @@
             </div>
             <div class="row">
                 <div class="cell">Киреев</div>
+                <div class="cell">8</div>
                 <div class="cell"></div>
                 <div class="cell"></div>
                 <div class="cell"></div>
-                <div class="cell"></div>
-                <div class="cell"></div>
+                <div class="cell">8</div>
                 <div class="cell"></div>
 
             </div>
@@ -1282,7 +1282,7 @@
             </div>
             <div class="row">
                 <div class="cell">Месник</div>
-                <div class="cell"></div>
+                <div class="cell">8</div>
                 <div class="cell"></div>
                 <div class="cell"></div>
                 <div class="cell"></div>
@@ -1296,13 +1296,13 @@
                 <div class="cell"></div>
                 <div class="cell"></div>
                 <div class="cell"></div>
-                <div class="cell"></div>
+                <div class="cell">7</div>
                 <div class="cell"></div>
 
             </div>
             <div class="row">
                 <div class="cell">Поцепня</div>
-                <div class="cell"></div>
+                <div class="cell">8</div>
                 <div class="cell"></div>
                 <div class="cell"></div>
                 <div class="cell"></div>
@@ -1312,7 +1312,7 @@
             </div>
             <div class="row">
                 <div class="cell">Рабинов</div>
-                <div class="cell"></div>
+                <div class="cell">8</div>
                 <div class="cell"></div>
                 <div class="cell"></div>
                 <div class="cell"></div>
@@ -1322,7 +1322,7 @@
             </div>
             <div class="row">
                 <div class="cell">Раковский</div>
-                <div class="cell"></div>
+                <div class="cell">8</div>
                 <div class="cell"></div>
                 <div class="cell"></div>
                 <div class="cell"></div>
@@ -1356,13 +1356,13 @@
                 <div class="cell"></div>
                 <div class="cell"></div>
                 <div class="cell"></div>
-                <div class="cell"></div>
+                <div class="cell">6</div>
                 <div class="cell"></div>
 
             </div>
             <div class="row">
                 <div class="cell">Шарох</div>
-                <div class="cell"></div>
+                <div class="cell">7</div>
                 <div class="cell"></div>
                 <div class="cell"></div>
                 <div class="cell"></div>
@@ -1372,11 +1372,11 @@
             </div>
             <div class="row">
                 <div class="cell">Шубенок</div>
+                <div class="cell">9</div>
                 <div class="cell"></div>
                 <div class="cell"></div>
                 <div class="cell"></div>
-                <div class="cell"></div>
-                <div class="cell"></div>
+                <div class="cell">7</div>
                 <div class="cell"></div>
 
             </div>
