поправка в дате с контрольными

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                               29.09.(вторник)  контрольная по русск. яз.
                             </li>
                             <li>
-                                01.10(четверг) контрольная по геометр.
+                                06.10(вторник) контрольная по геометр.
                             </li>
                             <li>
                                 02.10(пятница) сам. по истории беларуси
