--- a/index.html
+++ b/index.html
@@ -281,7 +281,7 @@
         <div class="cell">Гребенёк</div>
         <div class="cell"></div>
         <div class="cell"></div>
-        <div class="cell"></div>
+        <div class="cell">10</div>
         <div class="cell"></div>
         <div class="cell"></div>
         <div class="cell"></div>
@@ -291,7 +291,7 @@
         <div class="cell">Демидович</div>
         <div class="cell"></div>
         <div class="cell"></div>
-        <div class="cell"></div>
+        <div class="cell">5</div>
         <div class="cell"></div>
         <div class="cell"></div>
         <div class="cell"></div>
@@ -322,7 +322,7 @@
         <div class="cell"></div>
         <div class="cell"></div>
         <div class="cell"></div>
-        <div class="cell"></div>
+        <div class="cell">9</div>
         <div class="cell"></div>
         <div class="cell"></div>
 
@@ -331,7 +331,7 @@
         <div class="cell">Исаенко</div>
         <div class="cell"></div>
         <div class="cell"></div>
-        <div class="cell"></div>
+        <div class="cell">10</div>
         <div class="cell"></div>
         <div class="cell"></div>
         <div class="cell"></div>
@@ -341,7 +341,7 @@
         <div class="cell">Ильюшенко</div>
         <div class="cell"></div>
         <div class="cell"></div>
-        <div class="cell"></div>
+        <div class="cell">9</div>
         <div class="cell"></div>
         <div class="cell"></div>
         <div class="cell"></div>
@@ -351,7 +351,7 @@
         <div class="cell">Кашанский</div>
         <div class="cell"></div>
         <div class="cell"></div>
-        <div class="cell"></div>
+        <div class="cell">8</div>
         <div class="cell"></div>
         <div class="cell"></div>
         <div class="cell"></div>
@@ -372,9 +372,9 @@
         <div class="cell">Кобец</div>
         <div class="cell"></div>
         <div class="cell"></div>
+        <div class="cell">9</div>
         <div class="cell"></div>
-        <div class="cell"></div>
-        <div class="cell"></div>
+        <div class="cell">9</div>
         <div class="cell"></div>
 
     </div>
@@ -403,7 +403,7 @@
         <div class="cell"></div>
         <div class="cell"></div>
         <div class="cell"></div>
-        <div class="cell"></div>
+        <div class="cell">8</div>
         <div class="cell"></div>
         <div class="cell"></div>
 
@@ -414,7 +414,7 @@
         <div class="cell"></div>
         <div class="cell"></div>
         <div class="cell"></div>
-        <div class="cell"></div>
+        <div class="cell">8</div>
         <div class="cell"></div>
 
     </div>
@@ -481,8 +481,8 @@
     <div class="row">
         <div class="cell">Смиренина</div>
         <div class="cell"></div>
-        <div class="cell"></div>
-        <div class="cell"></div>
+        <div class="cell">5</div>
+        <div class="cell">8</div>
         <div class="cell"></div>
         <div class="cell"></div>
         <div class="cell"></div>
@@ -502,7 +502,7 @@
         <div class="cell">Шубенок</div>
         <div class="cell"></div>
         <div class="cell"></div>
-        <div class="cell"></div>
+        <div class="cell">10</div>
         <div class="cell"></div>
         <div class="cell"></div>
         <div class="cell"></div>
